corrected some formatting, added social media links, added comments

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 
     </header>
 
+    <!--Main with About Me, Portfolio, & Contact Info sections-->
     <main>
         <section class="topics">
+            <!--about me section with image of myself and a little background on my coding career-->
             <div id="about-me">
                 <section class="box">
                 <h3>About Me</h3>
@@ -36,26 +38,30 @@
                         Hi! My name is Kendall Pfenning and I am brand new to the world of coding! I am currently enrolled in the Coding Bootcamp at the University of Oregon, where I am learning the ins and outs of software development. 
                     </p>
                     <p>
-                        In 2020 I graduated from the University of Oregon with a General Science Major with emphasis in chemistry and geology as well as a minor in Anthropology. So you might be asking yourself "Why did you decide to change your career?". Well, I have always wanted to get into the development field and previously thought I couldn't do it, but I have decided I would rather say "Oh well" then "What if". And here we are!
+                        In 2020 I graduated from the University of Oregon with a General Science degree with emphasis in chemistry and geology as well as a minor in Anthropology. So you might be asking yourself "Why did you decide to change your career?". Well, I have always wanted to get into the development field and previously thought I couldn't do it, but I have decided I would rather say "Oh well" then "What if". And here we are!
                     </p>
                 </section>
             </div>
-
+            <!--My portfolio section with placeholders as my applications-->
             <div id="portfolio">
-                <section class="box portfolio">
+                <section class="box-portfolio">
                 <h3>Portfolio</h3>
-                    <div id="first-application">
-                        <p>My Applications</p>
-                        <h5>My first application</h5>
-                            <a href="#" id="first-app"><img src="#"></a>
-                        <h5>My other projects</h5>   
-                            <a href="#" class="apps"><img src="#"></a>
-                            <a href="#" class="apps"><img src="#"></a>
+        
+                    <div class="first-app">
+                        <div> 
+                            <h5>My first application</h5>
+                            <a href="https://www.google.com/" target="_blank" id="app1-photo"><img src="./assets/images/mainapp1.jpeg"></a>
+                        </div>
+                        <div class="other-apps">
+                            <h5>My other applications</h5>   
+                            <a href="https://www.urbanoutfitters.com/" target="_blank" class="app"><img src="./assets/Images/shopping.jpeg"></a>
+                            <a href="https://www.facebook.com/" target="_blank" class="app"><img src="./assets/Images/social media.jpeg"></a>
+                        </div>
 
                     </div>
                 </section>
             </div>
-
+            <!--Contact section with form to fill out-->
             <div id="contact-me">
                 <section class="box contact-me">
                     <h3>Contact Me</h3>
@@ -75,8 +81,19 @@
                                 <button type="submit">Sumbit</button>
                             </div>
                         </form>
-
                 </section>
+                <!--My social media links within contact me section-->
+                <div class="socials">
+                    <a href="https://github.com/kpfenning" target="_blank">
+                        <img src="./assets/Images/github.jpg" alt="GitHub logo">
+                    </a>
+                    <a href="https://www.instagram.com/kendall.pfenning/" target="_blank">
+                        <img src="./assets/Images/insta.png" alt="Instagram Logo">
+                    </a>
+                    <a href="https://www.linkedin.com/in/kendall-pfenning-a244a01a9/" target="_blank">
+                        <img src="./assets/Images/linkedin.jpg" alt="LinkedIn Logo">
+                    </a>
+                </div>
             </div>
 
 
