Added responsive layout and started README file

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <label for="message">Message:</label>
                             <textarea id="message" name="message" rows="6" required></textarea>
                             <div class="submit-button">
-                                <button type="submit">Sumbit</button>
+                                <button type="submit">Submit</button>
                             </div>
                         </form>
                 </section>
