--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="about-me">
                 <section class="box">
                 <h3>About Me</h3>
-                <img src="assets/images/photo-kendall.jpg" class="photo-kendall" alt="Photo of Kendall">
+                <img src="./assets/images/photo-kendall.jpg" class="photo-kendall" alt="Photo of Kendall">
                     <p> 
                         Hi! My name is Kendall Pfenning and I am brand new to the world of coding! I am currently enrolled in the Coding Bootcamp at the University of Oregon, where I am learning the ins and outs of software development. 
                     </p>
