one more true on images error

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="about-me">
                 <section class="box">
                 <h3>About Me</h3>
-                <img src="./assets/images/photo-kendall.jpg" class="photo-kendall" alt="Photo of Kendall">
+                <img src="./assets/Images/photo-kendall.jpg" class="photo-kendall" alt="Photo of Kendall">
                     <p> 
                         Hi! My name is Kendall Pfenning and I am brand new to the world of coding! I am currently enrolled in the Coding Bootcamp at the University of Oregon, where I am learning the ins and outs of software development. 
                     </p>
@@ -50,7 +50,7 @@
                     <div class="first-app">
                         <div> 
                             <h5>My first application</h5>
-                            <a href="https://www.google.com/" target="_blank" id="app1-photo"><img src="./assets/images/mainapp1.jpeg"></a>
+                            <a href="https://www.google.com/" target="_blank" id="app1-photo"><img src="./assets/Images/mainapp1.jpeg"></a>
                         </div>
                         <div class="other-apps">
                             <h5>My other applications</h5>   
