added new application

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="other-apps">
                             <h5>My other applications</h5>   
-                            <a href="https://www.urbanoutfitters.com/" target="_blank" class="app"><img src="./assets/Images/shopping.jpeg"></a>
+                            <a href="https://jcwarwick.github.io/Group2-Project/" target="_blank" class="app"><img src="./assets/Images/Movie App.png"></a>
                             <a href="https://www.facebook.com/" target="_blank" class="app"><img src="./assets/Images/social media.jpeg"></a>
                         </div>
 
