added Tackle Times

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="other-apps">
                             <h5>My other applications</h5>   
                             <a href="https://jcwarwick.github.io/Group2-Project/" target="_blank" class="app"><img src="./assets/Images/Movie App.png"></a>
-                            <a href="https://www.facebook.com/" target="_blank" class="app"><img src="./assets/Images/social media.jpeg"></a>
+                            <a href="https://tackle-a6362ae6d6c7.herokuapp.com/" target="_blank" class="app"><img src="./assets/Images/tackletimes.png"></a>
                         </div>
 
                     </div>
